--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ I Mentor and Inspire Young People to Embrace computing knowledge. I work with an
 
                             <div class="col s12 m4 l3 center-align">
                                 <h3>
-                                    <a href="reviews/index.html" target="_blank"><i class="fa fa-suitcase"></i></a>
+                                    <a href="reviewz/index.html" target="_blank"><i class="fa fa-suitcase"></i></a>
                                     <span class="font-weight-700">5</span>
                                 </h3>
                                 <h6 class="uppercase font-weight-500">Reputable Companies Engaged</h6>
