--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@ I Mentor and Inspire Young People to Embrace computing knowledge. I work with an
                                  <a href="#" class="col blog-2 m4 s12 btn font-weight-500"> Blog Posts <i class="fa fa-edit"></i>
                                 </a>
 
-                                <!-- <a href="reviewz/index.html" class="col s12 l4 m4 xl4 btn font-weight-500">
+                                <a href="reviewz/index.html" class="col s12 l4 m4 xl4 btn font-weight-500">
                                     What People Say About Me <i class="fa fa-edit"></i>
-                                </a> -->
+                                </a>
 
 
                             </div>
